# python-trainee-assignment

./: pyproject.toml
.github/workflows/: python-check.yml
usefullib/: __init__.py  types.py  utils.py
usefullib/tests/: __init__.py  test_extract_nums.py  test_get_matrix.py  test_spiral_order.py
