[tool.poetry]
name = "usefullib"
version = "0.1.0"
description = "Very useful library!"
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
